tests/paczka1/small_fuzzy/51092183.err
Error in line 5: G3FbIjjse A456 38,7
Error in line 9: rkIkwl3G S466 69,2
Error in line 11: G3FbIjjse S551 32,6
